1998-06-05  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* history.el (process-changelog): Handle src and tech.

	* configure.in: Add src/tech/Makefile.

	* common.el (pathname-for-swarmdocs,
	pathname-for-swarmdocs-revision-output): Handle src.

	* common.dsl: Mirror revhistory elements outside of
	reference-titlepage-verso-mode.

	* Makefile.rules: Use $(swarm_ChangeLog) instead of
	$(SWARMHOME)/%/ChangeLog in revhistory rule.

1998-06-04  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* swarmbook.dsl (revhistory, revision): Remove for both backends.

	* common.dsl (revhistory): Replace definition with simple title
	and children.
	(revision): A common definition.
	(revremark): Don't expand paragraphs, put in sequence with upright
	font posture.

	* Makefile.rules: Don't include dvi, ps, or tex.  Add explicit _$(NAME).tex target. 
	Make $(NAME).dvi dependent on macros.tex.
	* configure.in: Use `stylesheet' as argument to AC_ARG_WITH.
	
1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* catalog.in: New file.

	* history.el (process-changelog): Call fill-paragraph after
	inserting contents of REVREMARK.

	* common.el (insert-text): Strip tabs also.

	* docbook.dcl: New file (increase limits on NAMELEN, TAGLEN,
	and ATTSPLEN).

	* configure.in: Add option to specify DocBook DTD location.
	Substitute docbookdtd_srcdir and docbookstyle_srcdir (was
	stylesheets_srcdir).  Don't extract swarmbook.dsl.

	* protocol.el (sgml-refsect1-object-list,
	sgml-refsect1-global-list): Add /REFSECT1.
	(sgml-generate-index-of-type): Add /INDEX.

	* swarmbook.dsl: Use public identifiers for common and docbook;
	don't autoconf-substitute anything.
	(reference-titlepage-verso-mode): Add replacement (revhistory
	revision) expansion in HTML backend.

	* common.dsl: Move reference-titlepage-verso-elements 
	and revision history things here.

	* Makefile.rules: New variable CATOPTS, the list of catalog
	directives for local DSSSL, DocBook DTD, and DocBook DSSSL.